MDEV-26681: ERROR_INDEX is not available within compound statement blocks

Fixed after patch MDEV-26606 because root cause was same.

Analysis: m_current_row_for_warning is reset to 1 during cleanup phase of
stored procedure. When we perform a copy because some statement of procedure
created warning, this reset value is passed to push _warning().
Fix: Add a parameter in relevant functions to pass correct value of
error index and don't use m_current_row_for_warning directly.